--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,19 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:id="@+id/aw_container"
+        android:id="@+id/webview_container_1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        android:background="#00f"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/webview_container_2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#0f0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
