--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,100 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/webview_container_1"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#00f"
         app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <FrameLayout
-        android:id="@+id/webview_container_2"
+        <EditText
+            android:id="@+id/url_bar_1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter URL"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/refresh_button_1" />
+
+        <Button
+            android:id="@+id/refresh_button_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Refresh"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/back_button_1" />
+
+        <Button
+            android:id="@+id/back_button_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/forward_button_1" />
+
+        <Button
+            android:id="@+id/forward_button_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forward"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <FrameLayout
+            android:id="@+id/webview_container_1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#00f"
+            app:layout_constraintHeight_percent="0.95"
+            app:layout_constraintTop_toBottomOf="@+id/url_bar_1" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#0f0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.5" />
+        app:layout_constraintHeight_percent="0.5">
+
+        <FrameLayout
+            android:id="@+id/webview_container_2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#0f0"
+            app:layout_constraintBottom_toTopOf="@+id/url_bar_2"
+            app:layout_constraintHeight_percent="0.95" />
+
+        <EditText
+            android:id="@+id/url_bar_2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter URL"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/refresh_button_2" />
+
+        <Button
+            android:id="@+id/refresh_button_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Refresh"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/back_button_2" />
+
+        <Button
+            android:id="@+id/back_button_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/forward_button_2" />
+
+        <Button
+            android:id="@+id/forward_button_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forward"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
