--- a/aw_chromium/src/main/res/values/colors.xml
+++ b/aw_chromium/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="insecure_context_payment_disabled_message_text">#ff646464</color>
 
     <!-- TODO(crbug.com/775198): update colors once UX spec available. -->
-    <color name="color_picker_border_color">@color/hairline_stroke_color</color>
-    <color name="color_picker_background_color">@color/default_bg_color</color>
+    <color name="color_picker_border_color">@color/modern_grey_700</color>
+    <color name="color_picker_background_color">@color/modern_grey_900</color>
     <color name="default_text_color_baseline">#ff1f1f1f</color>
     <color name="default_text_color_secondary_baseline">#ff444746</color>
     <color name="menu_item_bg_color">@android:color/white</color>
@@ -13,8 +13,6 @@
     <color name="baseline_neutral_variant_90_alpha_20">#33e1e3e1</color>
     <color name="default_text_color_link_baseline">#ff0b57d0</color>
     <color name="default_bg_color_baseline">@android:color/white</color>
-    <color name="delete_button">#ff000000</color>
-    <color name="toolbar_shadow_color">#1d000000</color>
-    <color name="default_primary_color">#fff2f2f2</color>
     <color name="default_text_color_link_disabled_baseline">#611f1f1f</color>
+    <color name="default_text_color_dark">#ff1f1f1f</color>
 </resources>
