--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.MoeMoe" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.awChromium" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.MoeMoe" parent="Base.Theme.MoeMoe" />
+    <style name="Theme.awChromium" parent="Base.Theme.awChromium" />
 </resources>
